--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@nanostores/react": "^1.0.0",
     "@nanostores/router": "^1.0.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/vite": "^4.1.18",
     "class-variance-authority": "^0.7.1",
